--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
   "name": "pade",
-  "version": "0.0.1",
-  "description": "前端集成开发环境",
-  "main": "pade.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "xujun",
-  "license": "MIT",
-  "keywords": [
-    "front-end",
-    "development",
-    "tool",
-    "server",
-    "http"
-  ],
+  "version": "0.0.0",
+  "private": true,
   "bin": {
     "pade": "./pade.js"
   },
-  "repository": {
-    "type": "git",
-    "url":"https://github.com/xuj2017/pade.git"
+  "scripts": {
+    "start": "node ./bin/www",
+    "webpack": ".\\node_modules\\.bin\\webpack"
   },
   "dependencies": {
-    "yargs": "^10.0.3"
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "hbs": "~4.0.1",
+    "morgan": "~1.8.1",
+    "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "colors": "^1.2.1",
+    "fs-exists-sync": "^0.1.0",
+    "glob": "^7.1.2",
+    "handlebars": "^4.0.11",
+    "jsonfile": "^4.0.0",
+    "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.21.0",
+    "opn": "^5.3.0",
+    "request": "^2.85.0",
+    "webpack": "^2.4.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-server": "^3.1.1"
   }
 }
