--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "glob": "^7.1.2",
     "handlebars": "^4.0.11",
     "jsonfile": "^4.0.0",
+    "lodash": "^4.17.5",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.21.0",
