--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
   },
   "devDependencies": {
     "colors": "^1.2.1",
+    "extract-text-webpack-plugin": "^2.1.2",
     "fs-exists-sync": "^0.1.0",
     "glob": "^7.1.2",
     "handlebars": "^4.0.11",
     "jsonfile": "^4.0.0",
+    "less": "^3.0.1",
     "lodash": "^4.17.5",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.21.0",
+    "node-sass": "^4.8.3",
     "opn": "^5.3.0",
     "request": "^2.85.0",
     "webpack": "^2.4.1",
