--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "clean-css": "^4.1.11",
     "colors": "^1.2.1",
     "extract-text-webpack-plugin": "^2.1.2",
     "fs-exists-sync": "^0.1.0",
