--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.0",
     "clean-css": "^4.1.11",
     "colors": "^1.2.1",
     "extract-text-webpack-plugin": "^2.1.2",
@@ -33,6 +36,7 @@
     "node-sass": "^4.8.3",
     "opn": "^5.3.0",
     "request": "^2.85.0",
+    "uglify-js": "^3.3.18",
     "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-dev-server": "^3.1.1"
