--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs-exists-sync": "^0.1.0",
     "glob": "^7.1.2",
     "handlebars": "^4.0.11",
+    "http-proxy-middleware": "^0.18.0",
     "jsonfile": "^4.0.0",
     "less": "^3.0.1",
     "lodash": "^4.17.5",
@@ -37,6 +38,7 @@
     "opn": "^5.3.0",
     "request": "^2.85.0",
     "uglify-js": "^3.3.18",
+    "url": "^0.11.0",
     "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-dev-server": "^3.1.1"
