--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.15.2",
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
+    "multer": "^1.3.0",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
