--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.0",
+    "chokidar": "^2.0.3",
     "clean-css": "^4.1.11",
     "colors": "^1.2.1",
     "extract-text-webpack-plugin": "^2.1.2",
@@ -38,6 +39,7 @@
     "node-sass": "^4.8.3",
     "opn": "^5.3.0",
     "request": "^2.85.0",
+    "spritesmith": "^3.3.1",
     "uglify-js": "^3.3.18",
     "url": "^0.11.0",
     "webpack": "^2.4.1",
